--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="shortcut icon" href="image/favicon.ico"/>
+<link rel="shortcut icon" href="image.jiewang.ren/favicon.ico"/>
 </head>
 <body>
 <div style="text-align:center;">
@@ -16,7 +16,7 @@
 <h3 style="text-align:right; background-color:#00ffff;">----洁网人团队</h3>
 <a href="bbs.jiewang.ren">洁网论坛</a>
 <h3>赞助一下我们</h3>
-<img width="100" height="100" src="https://image.jiewang.ren/wechat.png">
-<img width="100" height="100" src="https://image.jiewang.ren/alipay.png">
+<img width="100" height="100" src="image.jiewang.ren/wechat.png">
+<img width="100" height="100" src="image.jiewang.ren/alipay.png">
 </body>
 </html>
