--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div style="text-align:center;">
-<img width="120" height="60" src="image/logo.png">
+<img width="120" height="60" src="image.jiewang.ren/logo.png">
 </div>
 <a style="background-color:#00ffff;"><font size="5">尊敬的洁网人客户您好!如果您看到此页面,就说明说明官网正在维护,请您放心<font size="6">数据不会丢失</font>的,请耐心等待,预计第二天修复!</font></a>
 <h3 style="text-align:right; background-color:#00ffff;">----洁网人团队</h3>
