--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="shortcut icon" href="image/favicon.ico"/>
+<link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body>
 <div style="text-align:center;">
-<img width="120" height="60" src="image/logo.png">
+<img width="120" height="60" src="logo.png">
 </div>
 <a style="background-color:#00ffff;"><font size="5">尊敬的洁网人客户您好!如果您看到此页面,就说明说明官网正在维护,请您放心<font size="6">数据不会丢失</font>的,请耐心等待,预计第二天修复!</font></a>
 <h3 style="text-align:right; background-color:#00ffff;">----洁网人团队</h3>
 <a href="bbs.jiewang.ren">洁网论坛</a>
 <h3>赞助一下我们</h3>
-<img width="100" height="100" src="image/wechat.png">
-<img width="100" height="100" src="image/alipay.png">
+<img width="100" height="100" src="wechat.png">
+<img width="100" height="100" src="alipay.png">
 </body>
 </html>
